# anonymous-sum-types-result

./: .gitignore  .mergify.yml  .mise.toml  .readthedocs.yaml  Cargo.toml  Justfile  renovate.json  rust-toolchain.toml
.github/workflows/: ci.yml  rust-clippy.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/lib/tests/: main_integration.rs
crates/lib/tests/expected/: main_integration_unix.txt  main_integration_windows.txt
setup/github/: Cargo.toml  Pulumi.prod.yaml  Pulumi.yaml  build.rs
setup/github/src/: main.rs
