[workspace]
resolver = "3"
members = [
    "crates/*",
    "setup/*"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anon_sum_types_lib = { path = "crates/lib" }
paste = "1.0.15"

pulumi_gestalt_rust = "0.0.12"
pulumi_gestalt_build = "0.0.12"
anyhow = "1.0.100"
bon = "3.8.2"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
